# cmake-ocaml

./: FindOCaml.cmake  README.markdown  UseOCaml.cmake
scripts/: maybe_link
tests/04-exe-with-clib/: CMakeLists.txt  bar.ml  cstubs.c  foo.mli
tests/09-ocamllex/: CMakeLists.txt  count.mll
tests/10-ocamlyacc/: CMakeLists.txt  lexer.mll  main.ml  rpcalc.mly
tests/11-capitalization/: CMakeLists.txt  fooBar.ml  main.ml
tests/12-do-annot/: CMakeLists.txt  foo.ml  foo.mli  main.ml
